# tentrix

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.0293314  README.md  diff.diff  main.cpp  move.cpp  move.h  print.cpp  print.h  structure.cpp  structure.h  tentrix.kdev4
doc/: board.ods
tentrix/: CMakeLists.txt
tentrix/include/tentrix/: move.h  print.h  structure.h
tentrix/src/: move.cpp  print.cpp  structure.cpp
tentrix_benchmark/: CMakeLists.txt  compute_bits.cpp  compute_move.cpp  main.cpp
tentrix_play/: CMakeLists.txt  main.cpp
tentrix_sandbox/: CMakeLists.txt  header.h  main.cpp
tentrix_tests/: CMakeLists.txt  main.cpp  move_knight.cpp  move_queen.cpp  move_tools.cpp
